[gd_scene load_steps=3 format=3 uid="uid://cly2pwnf886wn"]

[ext_resource type="Script" path="res://assets/scripts/dialogue/DialogueNode.gd" id="1_ixcqf"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_gupek"]

[node name="DialogueNode" type="Node"]
script = ExtResource("1_ixcqf")
dialogueRaw = "PLAYER : Default text
SPEAKER : Default text but again"

[node name="DialogueArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 130.0

[node name="DialogueBox" type="NinePatchRect" parent="DialogueArea"]
layout_mode = 1
offset_right = 300.0
offset_bottom = 130.0
texture = SubResource("PlaceholderTexture2D_gupek")

[node name="NameTag" type="RichTextLabel" parent="DialogueArea"]
layout_mode = 1
offset_right = 260.0
offset_bottom = 25.0
mouse_filter = 2
text = "Name Tag"
scroll_active = false
shortcut_keys_enabled = false

[node name="DialogueText" type="RichTextLabel" parent="DialogueArea"]
layout_mode = 1
offset_left = 40.0
offset_top = 25.0
offset_right = 300.0
offset_bottom = 130.0
mouse_filter = 2
text = "Hello there default test text"
scroll_active = false
shortcut_keys_enabled = false
